# xcolor

./: .travis.yml  Cargo.toml  LICENSE  Makefile  README.md  build.rs  shell.nix
.github/workflows/: build.yml
docker/: Dockerfile
extra/: xcolor.desktop
man/: xcolor.1
src/: atoms.rs  cli.rs  color.rs  draw.rs  format.rs  location.rs  main.rs  pixel.rs  preview.rs  selection.rs  util.rs  x11.rs
