[package]
name = "xcolor"
version = "0.4.0"
description = "Lightweight color picker for X11"
authors = ["Samuel Laurén <samuel.lauren@iki.fi>"]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["color", "utility", "color-picker", "x11"]
homepage = "https://github.com/Soft/xcolor"
repository = "https://github.com/Soft/xcolor"
build = "build.rs"
exclude = ["docker/*", "_config.yml"]
edition = "2018"

[dependencies]
failure = "0.1.3"
nom = "3.1.1"
clap = "2.32.0"
nix = "0.12.0"
libc = "0.2.44"
lazy_static = "1.2.0"

[dependencies.xcb]
version = "0.8.2"
features = ["shape"]

[build-dependencies]
clap = "2.31.2"

[profile.release]
lto = true
panic = "abort"

[badges]
travis-ci = { repository = "Soft/xcolor" }
