[package]
name = "xcolor"
version = "0.5.0"
description = "Lightweight color picker for X11"
authors = [
  "Samuel Laurén <samuel.lauren@iki.fi>",
  "Callum Osmotherly <acheronfail@gmail.com>"
]
license = "MIT"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["color", "utility", "color-picker", "x11"]
homepage = "https://github.com/Soft/xcolor"
repository = "https://github.com/Soft/xcolor"
build = "build.rs"
exclude = ["docker/*", "_config.yml"]
edition = "2018"

[dependencies]
anyhow = "1.0"
nom = "3.2"
clap = "2.33"
nix = "0.17"
libc = "0.2"
lazy_static = "1.4"

[dependencies.x11]
version = "2.3"
features = ["xlib", "xcursor"]

[dependencies.xcb]
version = "0.9"
features = ["xlib_xcb"]

[build-dependencies]
clap = "2.33"

[profile.release]
lto = true
panic = "abort"

[badges]
travis-ci = { repository = "Soft/xcolor" }
